BugFix: Salto de linea visible

--- a/css/huffman.css
+++ b/css/huffman.css
@@ -270,6 +270,7 @@ body {
 }
 
 .decode-result-text {
+  text-align: left;
   font-size: 16px;
   line-height: 1.5;
   color: var(--text-dark);
